Fixed: banner was on top of mobile nav in z-index

--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -15,7 +15,7 @@ nav {
     height: $nav-height;
     width: calc(100vw - #{$spacing-unit * 1});
 	padding: 0 #{$spacing-unit * 0.5};
-	background-color: rgba(253, 253, 253, 0.8);
+	background-color: rgba(253, 253, 253, 0.9);
 	border-bottom: solid 0.1px $grey-color-light;
   	
   	display: flex;
@@ -57,8 +57,8 @@ nav {
 	left: 0;
 	height: calc(100vh - #{$nav-height});
 	width: 100vw;
-	background-color: rgba(253, 253, 253, 0.8);
-	z-index: 100;
+	background-color: rgba(253, 253, 253, 0.9);
+	z-index: 1;
 	
 	animation: slide-across 0.5s;
 }
