--- a/_sass/components/_page.scss
+++ b/_sass/components/_page.scss
@@ -3,6 +3,7 @@
     max-height: 200px;
     min-height: 100px;
     background-color: #222;
+    z-index: -1;
 }
 
 .page-header {
